# gfa

./: .env  .env.example  .gitattributes  .gitignore  Caddyfile  Caddyfile.migration  DEPLOY-split-domain.md  Extract.js  Extract23.js  Extract23b.js  Extract23c.js  PRODUCT.md  README.md  Start-GFA.bat  Status-GFA.bat  Stop-GFA.bat  append_sci_fi.mjs  bcai.html  bcai.txt  build_css.mjs  check.ts  data_accounts.json  data_family_groups.json  debug-output.txt  debug-plan.js  dev-local.sh  docker-compose.yml  ecosystem.config.js  fix_pending.js  git_log_output.txt  git_log_ui.txt  package.json  pm2_list.txt  pnpm-lock.yaml  pnpm-workspace.yaml  query-account.js  query-logs.js  query-pending.js  query-slots.js  query-task.js  (+224 more)
.claude/: launch.json
_deprecated/: README.md
apps/gfa-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/gfa-client/src-tauri/src/: antigravity_db.rs  db.rs  lib.rs
apps/gfa-client/src-tauri/src/commands/: antigravity.rs  automation.rs  mod.rs  phone_pool.rs
apps/gfa-client/src-tauri/src/models/: mod.rs
docs/: DELIVERY.md  NAMING.md  OPERATIONS.md  PRIVATE-HOSTING.md  REFERRAL-CREDIT.md  RELEASE.md  claude-desktop-takeover-plan.md  server-setup-guide.md  takeover-env-sanitize-plan.md
exports/: athena_ducimusun-request-details-2026-06-26.md  order-exports-summary-2026-06-18.json  orders-2026-06-18.csv  orders-2026-06-18.json  plan-orders-2026-06-18.csv  plan-orders-2026-06-18.json  subscriptions-with-bound-accounts-2026-06-18.csv
prisma/: MIGRATIONS.md  dev-migration.db  dev.db  schema.prisma  seed-faq.cjs  seed-test.ts
scripts/: dev.mjs  (+72 more)
(+2301 files in other folders)
