[package]
name = "gfa-client"
version = "0.2.1"
description = "GFA Client — Google Family Automation"
authors = ["you"]
edition = "2021"

[lib]
name = "gfa_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2"
urlencoding = "2.1.3"
base64 = "0.22"
dirs = "5"
rand = "0.8"

